experimental/bitmagnet/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitmagnet
  labels:
    app: bitmagnet
  annotations:
    argocd.argoproj.io/sync-wave: "15"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bitmagnet
  template:
    metadata:
      labels:
        app: bitmagnet
      annotations:
        setGateway: "true"
    spec:
      containers:
        - name: bitmagnet
          image: ghcr.io/bitmagnet-io/bitmagnet:0.5.0-beta.1
          command: ["bitmagnet"]
          args: ["worker", "run", "--all"]
          ports:
            - name: http
              containerPort: 3333
              protocol: TCP
            - name: bittorrent-tcp
              containerPort: 3334
              protocol: "TCP"
            - name: bittorrent-udp
              containerPort: 3334
              protocol: "UDP"
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
